# MS-Comfy-Studio-Pro

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  HARDWARE_PROFILE.md  INSTALL.md  LICENSE  MEMORY.md  PLATFORM_SUPPORT.md  README.md  TODO.md  VERSION_HISTORY.md  pyproject.toml  requirements-xpu.txt  requirements.txt  run_comfy.bat  run_launcher.bat  setup.bat  setup.ps1  uninstall.bat
.github/workflows/: ci.yml  release.yml
configs/: __init__.py  default.yaml  models.yaml  xpu.yaml
configs/locales/: __init__.py  en-US.json  zh-CN.json
docs/: DESIGN_PRINCIPLES.md  DEVELOPMENT.md  HARDWARE_PROFILE.md  MODEL_POLICY.md  PHASE1_ACCEPTANCE_REPORT.md  PRODUCT_VISION.md  ROADMAP.md
platform/: README.md  __init__.py
platform/linux/: __init__.py  backend.py
platform/macos/: __init__.py  metal.py
platform/windows/: __init__.py  gpu.py
projects/memory/: development-phases.md  project-path.md  tech-stack.md
release/: PHASE5_REPORT.md  PHASE6_REPORT.md  PHASE7_REPORT.md  VERSION.json
src/: __init__.py  __version__.py  cli.py  config_manager.py  cpu_monitor.py  download_manager.py  env_manager.py  gpu_detector.py  health_check.py  i18n.py  launcher.py  logger.py  models.py  nodes.py  plugins.py  project_manager.py  start_config.py  updater.py  workflows.py
src/core/: __init__.py  base.py  dependency.py  engine.py  event_bus.py  scheduler.py
tests/: .gitkeep  integration_test.py  test_config_manager.py  test_event_bus.py  test_i18n.py  test_logger.py  test_models.py  test_project_structure.py  test_workflow_nodes.py
(+16 files in other folders)
