[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ms-comfy-studio-pro"
description = "企业级 ComfyUI 整合平台，专为 Intel Arc A750 (8GB) 优化"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MS Comfy Studio Pro Team"}
]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "packaging>=23.0",
    "psutil>=5.9.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
xpu = [
    "torch>=2.2.0",
    "torch-directml>=0.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
mcsp = "src.cli:main"
mcsp-launcher = "src.gui.app:main"
mcsp-comfy = "src.cli:run_comfy"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
